<resources>
    <string name="app_name">SocialKit</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit">Submit</string>
    <string name="socialMediaUsername">john.doe</string>
    <string name="socialMediaName">Facebook</string>
    <string name="socialMediaImagelink">https://www.facebook.com/john.doe</string>
    <string name="socialMediaLink">https://www.facebook.com/john.doe</string>
    <string name="platformName">Facebook</string>
    <string name="linkWithoutUsername">https://www.facebook.com/</string>
    <string name="imageLink">Place where image is stored</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups">Groups</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="placeholderPlatformLogo">PlatformLogo</string>
    <string name="placeholderUsername">username</string>
    <string name="full_name">Full name</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
</resources>
